--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="12dp">
+        android:layout_margin="12dp"
+        android:src="@drawable/baseline_exposure_plus_1_24">
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
 </FrameLayout>
